[package]
name = "pkg-builder"
version = "0.1.0"
edition = "2021"
publish = false
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.15.0"
chrono = "0.4.31"
# git2 = { version = "0.18.1", default-features = false, features = [] }
serde = { version = "1.0.192", features = ["derive"] }
toml = "0.8.8"
